log
Tue 12 Sep 2023 09:18:01 PM UTC: 
 tests:  1|8
total_score: 0/70
46182ad
Tue 12 Sep 2023 09:26:02 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:3: error: ‘new’ undeclared (first use in this function)
   44 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d275561
